add caculate functionality

--- a/LoanCalculator/app/src/main/res/layout/activity_main.xml
+++ b/LoanCalculator/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText3"
+            android:id="@+id/loan_amount"
             android:hint="@string/loan_amount_hint" />
 
     </LinearLayout>
@@ -61,7 +61,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText4"
+            android:id="@+id/term_loan"
             android:hint="@string/term_hint" />
     </LinearLayout>
 
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:inputType="number"
             android:ems="10"
-            android:id="@+id/editText5"
+            android:id="@+id/yearly_int_rate"
             android:layout_weight="0.01"
             android:hint="@string/yearly_interest_hint" />
 
@@ -98,15 +98,17 @@
             android:text="@string/calculate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button"
-            android:layout_weight="1" />
+            android:id="@+id/calculateBtn"
+            android:layout_weight="1"
+            android:onClick="calculateLoanInfo" />
 
         <Button
             android:text="@string/clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button2"
-            android:layout_weight="0.39" />
+            android:id="@+id/clearBtn"
+            android:layout_weight="0.39"
+            android:onClick="clearFields (MainActivity)" />
     </LinearLayout>
 
     <TextView
@@ -120,7 +122,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="57dp">
+        android:layout_height="30dp">
 
         <TextView
             android:text="@string/monthly_payment"
@@ -130,7 +132,7 @@
             android:layout_weight="0.81" />
 
         <TextView
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/monthly_payment_result"
             android:layout_weight="0.97"
             android:layout_width="wrap_content" />
@@ -139,7 +141,7 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="65dp">
+        android:layout_height="28dp">
 
         <TextView
             android:text="@string/total_payment"
